cmake_minimum_required(VERSION 2.8)
project( control )
find_package( OpenCV REQUIRED )
add_executable( control src/main.cpp src/bot.cpp src/bot.h src/network_manager.cpp src/network_manager.h src/state.cpp src/state.h src/utils.cpp src/utils.h src/camera_calibration.cpp src/camera_calibration.h src/agent.cpp src/agent.h)
add_executable( mdns-mod src/dns-sd.c src/ClientCommon.c src/ClientCommon.h)
add_executable( test_suite test_suite.h tests.cpp cxxtest/cxxtest/ src/bot.cpp src/bot.h src/network_manager.cpp src/network_manager.h src/state.cpp src/state.h src/utils.cpp src/utils.h src/camera_calibration.cpp src/camera_calibration.h src/agent.cpp src/agent.h)
target_link_libraries( test_suite ${OpenCV_LIBS} )
target_link_libraries( control ${OpenCV_LIBS} )
